tests/src/frontend/typechecking/exhaustiveness/invalid/exhaustive_pattern6.sk
base class MyBase final () {
  children =
  | A
  | B
  | C
}

fun matcher(obj: MyBase): Int {
  obj match {
  | A _ -> 42
  | A _ -> 101
  | B _ -> 112
  | C _ -> -30
  }
}
